--- a/views/header.html
+++ b/views/header.html
@@ -1,1 +1,14 @@
-
+<div id="home">
+  <a id="about" class="smooth"></a>
+  <div id="zeppelin">
+	<img src="zeppelin3.png">
+  </div>
+  <div id="nav">
+     <ul>
+          <li><a href="#">HOME</a></li>
+         <li><a href="/about">ABOUT</a></li>
+         <li><a href="/outreach">OUTRACH</a></li>
+         <li><a href="/sponsors">SPONSORS</a></li>
+	  <li><a href="/gallery">GALLERY</a></li>
+     </ul>
+</div>
