--- a/views/header.html
+++ b/views/header.html
@@ -18,12 +18,18 @@
 	</div>
 	<br><br>
 	<div class = "elem">
-	<div id="media">
+		<div id="media">
 			<ul>
-			<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="redIG.png"></a></li>
-			<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="redtwitter.png"></a></li>
-			<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="redIG2.png"></a></li>
-			<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="redIG3.png"></a></li>
-		</ul>
+				<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="redIG.png"></a></li>
+				<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="redtwitter.png"></a></li>
+				<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="redIG2.png"></a></li>
+				<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="redIG3.png"></a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="scrollDown"><a href="#page2">
+    		<div class ="text">SCROLL DOWN</div>
+			<img src="background1.png" class="image"/></a>
+		</div>
 	</div>
 </div>
