--- a/views/header.html
+++ b/views/header.html
@@ -1,34 +1,12 @@
-<div id="home">
-	<a id="about" class="smooth"></a>
-	<div id="zeppelin">
-		<img src="zeppelin3.png">
-	</div>
-	<div id="nav">
-     		<ul>
-			<li><a href="#">HOME</a></li>
-			<li><a href="/about">ABOUT</a></li>
-			<li><a href="/outreach">OUTRACH</a></li>
-			<li><a href="/sponsors">SPONSORS</a></li>
-			<li><a href="/gallery">GALLERY</a></li>
-		</ul>
-	</div>
-	
-	<div id="center">
-		<img src="https://cloud.githubusercontent.com/assets/6074292/13198238/cbe82efa-d7b8-11e5-9b45-e105d51e1f84.png">
-	</div>
-	<br><br>
-	<div class = "elem">
-		<div id="media">
-			<ul>
-				<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="redIG.png"></a></li>
-				<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="redtwitter.png"></a></li>
-				<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="redIG2.png"></a></li>
-				<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="redIG3.png"></a></li>
-			</ul>
-		</div>
-	</div>
-	<div id="scrollDown"><a href="#page2">
-    		<div class ="text">SCROLL DOWN</div>
-			<img src="background1.png" class="image"/></a>
-		</div>
-	</div>
+<div id="zeppelin">
+	<img src="zeppelin3.png">
+  </div>
+  <div id="nav">
+     <ul>
+          <li><a href="#">HOME</a></li>
+         <li><a href="/about">ABOUT</a></li>
+         <li><a href="/outreach">OUTREACH</a></li>
+		 <li><a href="/gallery">GALLERY</a></li>
+         <li><a href="/sponsors">SPONSORS</a></li>
+     </ul>
+</div>
