--- a/views/header.html
+++ b/views/header.html
@@ -5,7 +5,7 @@
      <ul>
           <li><a href="#">HOME</a></li>
          <li><a href="/about">ABOUT</a></li>
-         <li><a href="/outreach">OUTREACH</a></li>
+         <li><a href="/outreach">OUTRACH</a></li>
 	     <li><a href="/sponsors">SPONSORS</a></li>
 	     <li><a href="/gallery">GALLERY</a></li>
      </ul>
