--- a/views/header.html
+++ b/views/header.html
@@ -8,5 +8,6 @@
          <li><a href="/outreach">OUTRACH</a></li>
 	     <li><a href="/sponsors">SPONSORS</a></li>
 	     <li><a href="/gallery">GALLERY</a></li>
+		 test
      </ul>
 </div>
