--- a/views/footer.html
+++ b/views/footer.html
@@ -1,15 +1,13 @@
-</div>
-
-    <div id ="page3">
+<div id ="page3">
 	<div id="topfooter">
 		
 			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
 			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
-			<div id="toplinks"><a href="https://goo.gl/forms/9EkPM8Zn5kG7MVTq2"><span id="topwlines"><p>PRE-SEASON HOUR LOG</p></span></a></div>
+			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
 		
 	</div>
 	<div id="bottomfooter">
-	<p> Copyright 2018 FRC Team 2035 | All Rights Reserved  </p>
+	<p> Copyright 2016 FRC Team 2035 | All Rights Reserved  </p>
 	<div class = "elem">
 	<div id="media2"><ul>
 	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="whiteFacebook.png"></a></li>
