--- a/views/header.html
+++ b/views/header.html
@@ -5,9 +5,8 @@
      <ul>
           <li><a href="#">HOME</a></li>
          <li><a href="/about">ABOUT</a></li>
-         <li><a href="/outreach">OUTRAeCH</a></li>
+         <li><a href="/outreach">OUTREACH</a></li>
 	     <li><a href="/sponsors">SPONSORS</a></li>
 	     <li><a href="/gallery">GALLERY</a></li>
-	     <li><a href="/test">TEST</a></li>
      </ul>
 </div>
