--- a/views/footer.html
+++ b/views/footer.html
@@ -3,7 +3,7 @@
 		
 			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
 			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
-			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
+			<div id="toplinks"><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_UkpuN-wRc7nqL76xzTIgjMMGD7kipOVK6NbcPLT4X0LV9Q/viewform?usp=sf_link" target="_blank"><span id="topwlines"><p>PRE-SEASON HOUR LOG</p></span></a></div>
 		
 	</div>
 	<div id="bottomfooter">
