--- a/views/footer.html
+++ b/views/footer.html
@@ -10,15 +10,15 @@
 	<p> Copyright 2016 FRC Team 2035 | All Rights Reserved  </p>
 	<div class = "elem">
 	<div id="media2"><ul>
-	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="whiteFacebook.png"></a></li>
-	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="whiteTwitter.png"></a></li>
-	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="whiteIG.png"></a></li>
-	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="whiteGit.png"></a></li>
+	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="../whiteFacebook.png"></a></li>
+	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="../whiteTwitter.png"></a></li>
+	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="../whiteIG.png"></a></li>
+	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="../whiteGit.png"></a></li>
 	</ul>
 	</div>
 	</div>
         
 	<!--<div id = "tear"><img src="jackscats/tear.png"></div>-->
-	<div id="tear"><img src='tear2.png' onmouseover="this.src='mcfarlin.png';" onmouseout="this.src='tear2.png';" /></div>
+	<div id="tear"><img src='tear2.png' onmouseover="this.src='../mcfarlin.png';" onmouseout="this.src='../tear2.png';" /></div>
 </div>
         </div>
