--- a/views/footer.html
+++ b/views/footer.html
@@ -18,7 +18,7 @@
 	</div>
 	</div>
         
-	<!--<div id = "tear"><img src="jackscats/tear.png"></div>-->
-	<div id="tear"><img src='tear2.png' onmouseover="this.src='../mcfarlin.png';" onmouseout="this.src='../tear2.png';" /></div>
+	<!--<div id = "tear"><img src="../jackscats/tear.png"></div>-->
+	<div id="tear"><img src='../tear2.png' onmouseover="this.src='../mcfarlin.png';" onmouseout="this.src='../tear2.png';" /></div>
 </div>
         </div>
