--- a/views/header.html
+++ b/views/header.html
@@ -3,10 +3,10 @@
   </div>
   <div id="nav">
      <ul>
-          <li><a href="#">HOME</a></li>
-         <li><a href="/about">ABOUT</a></li>
-         <li><a href="/outreach">OUTREACH</a></li>
-	     <li><a href="/sponsors">SPONSORS</a></li>
-	     <li><a href="/gallery">GALLERY</a></li>
+          <li><a href="../#">HOME</a></li>
+         <li><a href="../about">ABOUT</a></li>
+         <li><a href="../outreach">OUTREACH</a></li>
+	     <li><a href="../sponsors">SPONSORS</a></li>
+	     <li><a href="../gallery">GALLERY</a></li>
      </ul>
 </div>
